# claude-island

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
snippets/: 00-base.toml  10-claude.toml  env-bun.toml  env-c.toml  env-deno.toml  env-dotnet.toml  env-elixir.toml  env-go.toml  env-haskell.toml  env-jvm.toml  env-mise.toml  env-node.toml  env-perl.toml  env-php.toml  env-python3.toml  env-ruby.toml  env-rust.toml  env-zig.toml
src/: broker.rs  canary.rs  denials.rs  detect.rs  envs.rs  explain.rs  main.rs  profile.rs  project_config.rs  proxy.rs  pty.rs  report.rs
